--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@casl/ability": "^6.5.0",
     "@headlessui/react": "^1.7.17",
+    "@tanstack/react-query": "^5.8.1",
     "clsx": "^2.0.0",
     "immer": "^10.0.3",
     "localforage": "^1.10.0",
@@ -26,6 +27,7 @@
     "zustand": "^4.4.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.6.0",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.15",
     "@types/react-beautiful-dnd": "^13.1.6",
